# terraform-opensearch-resources

./: .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  README.md  flake.nix  main.tf  pyproject.toml  variables.tf
